Fix console color issues with latest Paper

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ name: SimpleServerTools
 version: ${project.version}
 main: io.github.bilektugrul.simpleservertools.SST
 api-version: '1.13'
-prefix: '§6SimpleServerTools§r'
+prefix: 'SimpleServerTools'
 softdepend:
   - PlaceholderAPI
   - ProtocolLib
