--- a/pom.xml
+++ b/pom.xml
@@ -124,5 +124,11 @@
             <version>1.0.6</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>xyz.upperlevel.spigot.book</groupId>
+            <artifactId>spigot-book-api</artifactId>
+            <version>1.4.2</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
