--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
                                 </relocation>
                                 <relocation>
                                     <pattern>me.despical.commons</pattern>
-                                    <shadedPattern>io.github.bilektugrul.simpleservertools.internal.despical-commons</shadedPattern>
+                                    <shadedPattern>io.github.bilektugrul.simpleservertools.internal.commons</shadedPattern>
                                 </relocation>
                             </relocations>
                         </configuration>
@@ -119,7 +119,7 @@
         <dependency>
             <groupId>com.github.Despical</groupId>
             <artifactId>Commons</artifactId>
-            <version>1.3.6</version>
+            <version>1.3.9</version>
             <scope>compile</scope>
             <exclusions>
                 <exclusion>
@@ -149,7 +149,7 @@
         <dependency>
             <groupId>xyz.upperlevel.spigot.book</groupId>
             <artifactId>spigot-book-api</artifactId>
-            <version>1.4.2</version>
+            <version>1.5</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
