--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -74,7 +74,7 @@ commands:
     usage: /tpall
   msg:
     usage: /msg
-    aliases: [r, reply, w, whisper, message, msj, yanıt]
+    aliases: [r, reply, w, whisper, message, msj, yanıt, tell]
   msgtoggle:
     usage: /msgtoggle
   speed:
